fix visibility

--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,3 @@
-.d-none {
-  display: none !important;
+.v-hidden {
+  visibility: hidden !important;
 }
